@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.188 2009/07/26 05:50:31 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.189 2009/08/02 00:27:52 keri Exp $
+
+*swi-prolog-5.7.13 (02 Aug 2009)
+
+  02 Aug 2009; <keri@gentoo.org> +swi-prolog-5.7.13.ebuild:
+  Bump -5.7 development version
 
 *swi-prolog-5.7.12 (26 Jul 2009)
 
